--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,14 +13,13 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484121.md#1" title="程晓农：中共的现金外汇储备行将见底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484237.md#1" title="大陆3季度粮价上涨 玉米每吨价格创4年新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/1906082300411528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kdoobq3732.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】川普：勿忘病毒来自中国</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485182.md#1">拜登竞选阵营警告支持者：川普仍可胜选</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】美南部州经济复苏快</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
-<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482198.md#1">【翻墙必看】习近平突然返京的原因</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
@@ -30,6 +29,7 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482279.md#1">内斗激烈 中共能源局副局长落马</a><br>
+<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
 <br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
@@ -42,14 +42,14 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,792,581 人
+!共 365,793,493 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485086.md#1">朱利安尼：拜登儿子抱怨 钱财与老爹分半</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483748.md#1">习南下强调绝对领导 分析：忧解放军冒进酿祸</a><br>
-<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484951.md#1">【直播】川普内华达州演讲 民众提前八小时排队</a><br>
+<a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484951.md#1">【重播】川普内华达州演讲：重大选择来临</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483244.md#1">杨威：缩水的政治局会议再现高层诡异</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484121.md#1">程晓农：中共的现金外汇储备行将见底</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484524.md#1">疫情期间 大陆“罚款经济”愈发严重</a><br>
@@ -107,7 +107,7 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12473483.md#1">【新闻看点】中共突曝台谍案 美拟售台尖端武器</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12473364.md#1">【役情最前线】习近平抵深圳 召港澳特首</a><br>
 <br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484176.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12482046.md#1">入狱十年又被打残 访民马志文揭中共腐败</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482834.md#1">河南许昌市中级法院宋世旭等两法官被查</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12478438.md#1">有口皆碑的河北女教师朱素荣被冤判3年</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484970.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/03/428e6a993c49fac1b2330a752b108077-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483899.md#1">深圳楼市分化 二手房成交量腰斩 新房被抢购</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12476425.md#1">受中共科技专制拖累 科企出国路几近被堵死</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484723.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1176828241-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484334.md#1">成都大学书记遗体告别式 校长未现身引关注</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484455.md#1">最高检检务督察局长落马 曾长期跟随秦光荣</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484354.md#1">印媒专访台湾外长 谈敏感话题 中共跳脚</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484378.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/34-1-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482810.md#1">青岛染疫男载客231人 网民：乘客接触者呢？</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482560.md#1">深航客机降落攀枝花机场 撞坏跑道设备</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480754.md#1">浙江启动紧急疫苗接种 民众买单 安全存疑</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484047.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12472161.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484176.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12482046.md#1">入狱十年又被打残 访民马志文揭中共腐败</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482834.md#1">河南许昌市中级法院宋世旭等两法官被查</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12478438.md#1">有口皆碑的河北女教师朱素荣被冤判3年</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484970.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/03/428e6a993c49fac1b2330a752b108077-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483899.md#1">深圳楼市分化 二手房成交量腰斩 新房被抢购</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12476425.md#1">受中共科技专制拖累 科企出国路几近被堵死</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484723.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1176828241-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484334.md#1">成都大学书记遗体告别式 校长未现身引关注</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484455.md#1">最高检检务督察局长落马 曾长期跟随秦光荣</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484354.md#1">印媒专访台湾外长 谈敏感话题 中共跳脚</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483031.md#1">中共通辽市前常委搞权色交易 疫情时聚众赌博</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484378.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/34-1-320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482810.md#1">青岛染疫男载客231人 网民：乘客接触者呢？</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482560.md#1">深航客机降落攀枝花机场 撞坏跑道设备</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480754.md#1">浙江启动紧急疫苗接种 民众买单 安全存疑</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484047.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12472161.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a><br><br><p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/12/n12471193.md#1">【独家】驻华使领馆被中共视为敌对势力</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/10/n12465951.md#1">【独家】密件泄中共预测秋冬疫情爆发情形</a><br>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/11/n12468712.md#1">【独家】南海上演伤亡演习 美中针锋相对</a><br>
