--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/5/n4566246.md#1" target="_blank">患“不死绝症”大陆女士神奇“重生”</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436585.md#1" target="_blank">李小刚：十年文革灾难性后果探究</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
