--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -132,7 +132,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490487.md#1" target="_blank">“感受到强大能量”塞浦路斯女子走入修炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
