--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10730270.md#1" target="_blank">观雨堂主：“道德错乱”下的卞仲耘之死</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
