--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077932.md#1" target="_blank">中国教育的失败源于破坏传统文化及灌输党文化</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/27/n9896712.md#1" target="_blank">金剑：中央集权制绝对不是封建社会</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
